--- a/youtube.html
+++ b/youtube.html
@@ -177,10 +177,11 @@ src="https://www.facebook.com/tr?id=712562278497856&ev=PageView&noscript=1"
         </div>
     </div>
 
-    <a href="https://youtube.com/@wb_obzori_anna?si=WCStcdkPwKicPAhU" class="main-button">
-            Перейти на ютуб-канал
-        </a>
+<a href="https://youtube.com/@wb_obzori_anna?sub_confirmation=1" class="main-button">
+    Перейти на ютуб-канал
+</a>
 </div>
 
 </body>
+
 </html>
